Add bedroom4 image to gallery
- Resized bedroom4.jpg from 4032x3024 to 1280x960
- Added bedroom4 to gallery between bedroom3 and bathrooms section
- Updated data-index values for all subsequent gallery items (now 36 total)
- Added bedroom4 alt text to all language translation files
- Rebuilt all language versions with updated gallery

--- a/translations/de.json
+++ b/translations/de.json
@@ -67,6 +67,7 @@
       "masterSuite": "Master Suite",
       "bedroom2": "Schlafzimmer 2",
       "bedroom3": "Schlafzimmer 3",
+      "bedroom4": "Bedroom 4",
       "bathroom": "Badezimmer",
       "ensuiteBathroom": "Badezimmer en Suite",
       "office": "Büro",
