--- a/translations/en.json
+++ b/translations/en.json
@@ -67,6 +67,7 @@
       "masterSuite": "Master Suite",
       "bedroom2": "Bedroom 2",
       "bedroom3": "Bedroom 3",
+      "bedroom4": "Bedroom 4",
       "bathroom": "Bathroom",
       "ensuiteBathroom": "Ensuite Bathroom",
       "office": "Office Space",
