--- a/translations/fr.json
+++ b/translations/fr.json
@@ -67,6 +67,7 @@
       "masterSuite": "Suite Parentale",
       "bedroom2": "Chambre 2",
       "bedroom3": "Chambre 3",
+      "bedroom4": "Bedroom 4",
       "bathroom": "Salle de Bain",
       "ensuiteBathroom": "Salle de Bain Attenante",
       "office": "Espace Bureau",
