--- a/translations/nl.json
+++ b/translations/nl.json
@@ -67,6 +67,7 @@
       "masterSuite": "Master Suite",
       "bedroom2": "Slaapkamer 2",
       "bedroom3": "Slaapkamer 3",
+      "bedroom4": "Bedroom 4",
       "bathroom": "Badkamer",
       "ensuiteBathroom": "Ensuite Badkamer",
       "office": "Kantoorruimte",
