--- a/translations/pt.json
+++ b/translations/pt.json
@@ -67,6 +67,7 @@
       "masterSuite": "Suíte Principal",
       "bedroom2": "Quarto 2",
       "bedroom3": "Quarto 3",
+      "bedroom4": "Bedroom 4",
       "bathroom": "Casa de Banho",
       "ensuiteBathroom": "Casa de Banho da Suíte",
       "office": "Escritório",
