--- a/translations/sv.json
+++ b/translations/sv.json
@@ -67,6 +67,7 @@
       "masterSuite": "Master Svit",
       "bedroom2": "Sovrum 2",
       "bedroom3": "Sovrum 3",
+      "bedroom4": "Bedroom 4",
       "bathroom": "Badrum",
       "ensuiteBathroom": "Ensuite Badrum",
       "office": "Kontorsutrymme",
