Update and add office images to gallery
- Resized office.jpg from 5712x4284 to 1920x1440
- Added new office1.jpg and resized from 4032x3024 to 1920x1440
- Added office1 to gallery after office in Additional Spaces section
- Updated data-index values for all subsequent gallery items (now 37 total)
- Added office1 alt text to all language translation files
- Rebuilt all language versions with updated gallery

--- a/translations/de.json
+++ b/translations/de.json
@@ -71,6 +71,7 @@
       "bathroom": "Badezimmer",
       "ensuiteBathroom": "Badezimmer en Suite",
       "office": "Büro",
+      "office1": "Office with Mezzanine",
       "gym": "Fitnessraum",
       "outdoorTerrace": "Außenterrasse",
       "seatingArea": "Sitzbereich im Freien",
