--- a/translations/en.json
+++ b/translations/en.json
@@ -71,6 +71,7 @@
       "bathroom": "Bathroom",
       "ensuiteBathroom": "Ensuite Bathroom",
       "office": "Office Space",
+      "office1": "Office with Mezzanine",
       "gym": "Gym Facility",
       "outdoorTerrace": "Outdoor Terrace",
       "seatingArea": "Outdoor Seating Area",
