--- a/translations/fr.json
+++ b/translations/fr.json
@@ -71,6 +71,7 @@
       "bathroom": "Salle de Bain",
       "ensuiteBathroom": "Salle de Bain Attenante",
       "office": "Espace Bureau",
+      "office1": "Office with Mezzanine",
       "gym": "Salle de Sport",
       "outdoorTerrace": "Terrasse Extérieure",
       "seatingArea": "Coin Salon Extérieur",
