--- a/translations/nl.json
+++ b/translations/nl.json
@@ -71,6 +71,7 @@
       "bathroom": "Badkamer",
       "ensuiteBathroom": "Ensuite Badkamer",
       "office": "Kantoorruimte",
+      "office1": "Office with Mezzanine",
       "gym": "Fitnessruimte",
       "outdoorTerrace": "Buitenterras",
       "seatingArea": "Zithoek Buiten",
