--- a/translations/pt.json
+++ b/translations/pt.json
@@ -71,6 +71,7 @@
       "bathroom": "Casa de Banho",
       "ensuiteBathroom": "Casa de Banho da Suíte",
       "office": "Escritório",
+      "office1": "Office with Mezzanine",
       "gym": "Ginásio",
       "outdoorTerrace": "Terraço Exterior",
       "seatingArea": "Área de Estar Exterior",
