--- a/translations/sv.json
+++ b/translations/sv.json
@@ -71,6 +71,7 @@
       "bathroom": "Badrum",
       "ensuiteBathroom": "Ensuite Badrum",
       "office": "Kontorsutrymme",
+      "office1": "Office with Mezzanine",
       "gym": "Gymfacilitet",
       "outdoorTerrace": "Uteplats",
       "seatingArea": "Utesittplats",
